<?xml version="1.0"?>
<package>
  <name>or_interactivemarker</name>
  <version>0.0.1</version>
  <description>
    OpenRAVE viewer plugin that publishes the environment as InteractiveMarkers
    that can be visualized in RViz.
  </description>
  <url type="repository">https://github.com/mkoval/or_interactivemarker</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>openrave</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
