<?xml version="1.0"?>
<package format="2">
  <name>or_interactivemarker</name>
  <version>0.0.1</version>
  <description>
    OpenRAVE viewer plugin that publishes the environment as InteractiveMarkers
    that can be visualized in RViz.
  </description>
  <url type="repository">https://github.com/mkoval/or_interactivemarker</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave_catkin</build_depend>
  <depend>boost</depend>
  <depend>interactive_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
