<?xml version="1.0"?>
<package format="2">
  <name>or_rviz</name>
  <version>1.1.0</version>
  <description>
    OpenRAVE viewer plugin that publishes the environment as InteractiveMarkers
    that can be visualized in RViz.
  </description>
  <url type="website">https://github.com/mkoval/or_rviz</url>
  <url type="repository">https://github.com/mkoval/or_rviz.git</url>
  <url type="bugtracker">https://github.com/mkoval/or_rviz/issues</url>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="mklingen@cs.cmu.edu">Matthew Klingensmith</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>openrave_catkin</depend>
  <depend>boost</depend>
  <depend>interactive_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>libogre-dev</depend>
  <depend>libqt4-dev</depend>
  <export>
    <rviz plugin="${prefix}/plugins.xml"/>
  </export>
</package>
